--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -104,11 +104,11 @@
   min-height: 30px !important;
   width: $width !important;
   border-radius: 5px !important;
+  border: none !important;
   padding: 5px 10px !important;
   font: 600 $font-size "Montserrat", Verdana, Geneva, Tahoma, sans-serif !important;
-  white-space: break-spaces !important;
+  white-space: collapse !important;
   transition: background 0.1s ease-in-out;
-  border: none !important;
 
   &:hover {
     background: $background-hover !important;
