Enhance calendar and profile styles
- Updated calendar styles to set width to fit-content and changed background color to black.
- Refined dropdown toggle styles in profile to exclude best-speed dropdowns.
- Modified statistics styles to adjust margins and added new styles for best-speed elements, including background colors and text colors.
- Improved charts section with new styles for graph controls, dropdown menus, and close button interactions.

--- a/src/calendar.scss
+++ b/src/calendar.scss
@@ -3,7 +3,11 @@
 $fontFamily: "Montserrat", Verdana, Geneva, Tahoma, sans-serif;
 
 // Main calendar container
+.ui-datepicker,
 .calendar {
+  width: fit-content !important;
+  background: $black !important;
+
   // Reset jQuery UI default styles
   .ui-datepicker-inline {
     width: fit-content !important;
