--- a/src/profile/_root.scss
+++ b/src/profile/_root.scss
@@ -224,7 +224,7 @@
   }
 }
 
-#content .dropdown-toggle {
+#content .dropdown-toggle:not(.best-speed .dropdown-toggle) {
   color: $lightblue !important;
   background-color: $deepgray !important;
   border: 1px solid $blue !important;
