--- a/src/base.scss
+++ b/src/base.scss
@@ -67,7 +67,7 @@ $awards: (
 }
 
 @mixin button-base {
-  font-weight: lighter !important;
+  font-weight: normal !important;
   border: none !important;
   border-radius: 3px !important;
 }
