--- a/src/profile/statistics/_statistics-table.scss
+++ b/src/profile/statistics/_statistics-table.scss
@@ -22,6 +22,7 @@
     }
 
     .google-visualization-table {
+      width: 100% !important;
       background-color: $black;
       border-radius: 12px;
       overflow: hidden;
