Add transparent fill to pie chart rectangles in statistics SCSS
- Updated the _statistics.scss file to set the fill of rect elements within the chart-pie class to transparent. This change ensures that the rectangles do not obstruct the visibility of underlying chart elements.

--- a/src/profile/statistics/_statistics.scss
+++ b/src/profile/statistics/_statistics.scss
@@ -55,6 +55,10 @@ $gametype-colors: (
             }
             .chart-pie {
               svg {
+                rect {
+                  fill: transparent !important;
+                }
+
                 g {
                   path {
                     stroke: none !important;
