Update version and modify statistics styles
- Bump version of KG_Dark_Theme to 1.0.61 in header-tampermonkey.js
- Change text styles in _statistics-inside.scss to use black fill, blue stroke, and Montserrat font with updated weight and size

--- a/src/profile/statistics/_statistics-inside.scss
+++ b/src/profile/statistics/_statistics-inside.scss
@@ -167,8 +167,9 @@
                 }
 
                 text {
-                  fill: lighten($white, 20%) !important;
-                  stroke-width: 0 !important;
+                  fill: $black !important;
+                  stroke: $blue !important;
+                  font: 600 12px "Montserrat", sans-serif !important;
                 }
               }
             }
