Add text formatting icons in SVG format to _textFormatIcons.scss

--- a/src/data/variables.scss
+++ b/src/data/variables.scss
@@ -1,7 +1,8 @@
+@import "functions";
 @import "colors";
 @import "logo";
 @import "raster";
-@import "vector";
+@import "vector/vector";
 @import "newGame";
 
 // Limited main container width on wide screens
