--- a/src/formatButtons.scss
+++ b/src/formatButtons.scss
@@ -12,31 +12,34 @@
   }
 
   img {
+    $iconColor: $lightblue; // Default icon color
+
     // Individual button backgrounds using map
     $button-map: (
-      "rte-background": $background,
-      "rte-bold": $bold,
-      "rte-center": $center,
-      "rte-code": $code,
-      "rte-color": $color,
-      "rte-hide": $hide,
-      "rte-html": $html,
-      "rte-image": $image,
-      "rte-italic": $italic,
-      "rte-left": $left,
-      "rte-link": $link,
-      "rte-list_0": $list,
-      "rte-list_1": $listnum,
-      "rte-quote": $quote,
-      "rte-quotesel": $quotesel,
-      "rte-right": $right,
-      "rte-size": $size,
-      "rte-strike": $strike,
-      "rte-sub": $sub,
-      "rte-sup": $sup,
-      "rte-tab": $tab,
-      "rte-underlined": $underlined,
-      "rte-youtube": $youtube,
+      "rte-quote": icon("quote", $iconColor),
+      "rte-quotesel": icon("blockquote", $iconColor),
+      "rte-bold": icon("bold", $iconColor),
+      "rte-italic": icon("italic", $iconColor),
+      "rte-underlined": icon("underline", $iconColor),
+      "rte-strike": icon("strikethrough", $iconColor),
+      "rte-sup": icon("superscript", $iconColor),
+      "rte-sub": icon("subscript", $iconColor),
+      "rte-size": icon("textSize", $iconColor),
+      "rte-color": icon("textColor", $iconColor),
+      "rte-background": icon("textBackground", $iconColor),
+      "rte-link": icon("link", $iconColor),
+      "rte-image": icon("image", $iconColor),
+      "rte-hide": icon("spoiler", $iconColor),
+      "rte-left": icon("alignLeft", $iconColor),
+      "rte-center": icon("alignCenter", $iconColor),
+      "rte-right": icon("alignRight", $iconColor),
+      "rte-tab": icon("indent", $iconColor),
+      "rte-list_0": icon("list", $iconColor),
+      "rte-list_1": icon("listNumbered", $iconColor),
+      "rte-code": icon("code", $iconColor),
+      "rte-html": icon("html", $iconColor),
+      "smile": icon("smile", $iconColor),
+      "rte-youtube": icon("youtube", $iconColor)
     );
 
     @each $selector, $icon in $button-map {
@@ -53,29 +56,29 @@
     }
 
     // Common styles for all BBCode buttons
-    &[src*="rte-background"],
-    &[src*="rte-bold"],
-    &[src*="rte-center"],
-    &[src*="rte-code"],
-    &[src*="rte-color"],
-    &[src*="rte-hide"],
-    &[src*="rte-html"],
-    &[src*="rte-image"],
-    &[src*="rte-italic"],
-    &[src*="rte-left"],
-    &[src*="rte-link"],
-    &[src*="rte-list"],
-    &[src*="rte-listnum"],
     &[src*="rte-quote"],
     &[src*="rte-quotesel"],
-    &[src*="rte-right"],
-    &[src*="rte-size"],
-    &[src*="rte-strike"],
-    &[src*="rte-sub"],
-    &[src*="rte-sup"],
-    &[src*="rte-tab"],
+    &[src*="rte-bold"],
+    &[src*="rte-italic"],
     &[src*="rte-underlined"],
-    &[onclick*="rte-smileTab"],
+    &[src*="rte-strike"],
+    &[src*="rte-sup"],
+    &[src*="rte-sub"],
+    &[src*="rte-size"],
+    &[src*="rte-color"],
+    &[src*="rte-background"],
+    &[src*="rte-link"],
+    &[src*="rte-image"],
+    &[src*="rte-hide"],
+    &[src*="rte-left"],
+    &[src*="rte-center"],
+    &[src*="rte-right"],
+    &[src*="rte-tab"],
+    &[src*="rte-list"],
+    &[src*="rte-listnum"],
+    &[src*="rte-code"],
+    &[src*="rte-html"],
+    &[src*="smile"],
     &[src*="rte-youtube"] {
       border-radius: 5px !important;
       box-sizing: border-box !important;
