Refactor code structure for improved readability and maintainability

--- a/src/data/vector/vector.scss
+++ b/src/data/vector/vector.scss
@@ -1,4 +1,9 @@
 @import "../functions";
+@import "./vectorData/logo";
+
+// Create and Save game buttons on create game page
+@import "./vectorData/create";
+
 @import "./vectorData/elementIcons";
 @import "./vectorData/textFormatIcons";
 
