--- a/src/main.scss
+++ b/src/main.scss
@@ -30,7 +30,7 @@
 @import "avatar";
 @import "./userPanel/userPanel";
 @import "./mainMenu/mainMenu";
-@import "floating-navigation";
+@import "floatingNavigation";
 
 // -----------------------------------------------------------------------------
 // 5. UI COMPONENTS
