--- a/src/write/write.scss
+++ b/src/write/write.scss
@@ -36,7 +36,7 @@
   &:focus,
   &:focus-within {
     width: 40vw !important;
-    min-width: 500px !important;
+    min-width: 250px !important;
     height: 80vh !important;
     overflow: visible !important;
     background: $black !important;
@@ -65,6 +65,11 @@
   p:has(input) {
     display: flex !important;
     flex-shrink: 0 !important;
+
+    @media (max-width: 400px) {
+      flex-direction: column !important;
+      gap: 5px !important;
+    }
 
     @include send-preview-buttons();
   }
